# hive-rust

./: Cargo.toml  readme.md
src/: bug.rs  engine.rs  game.rs  hive.rs  main.rs  move.rs  perft.rs  player.rs  tcp_server.rs  tile.rs
src/bugs/: ant.rs  beetle.rs  bug.rs  grasshopper.rs  mod.rs  queen.rs  spider.rs
src/logic/: eval.rs  game.rs  hive.rs  mod.rs  move.rs  player.rs  tile.rs
src/logic/bugs/: ant.rs  queen.rs  spider.rs
