[package]
name = "hive-rust"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
log = "0.4.20"
minimax = "0.5.3"
pathfinding = "4.9.1"
regex = "1.10.3"
simple-logging = "2.0.2"

[[bin]]
name = "server"
path = "src/tcp_server.rs"
